New section is added

--- a/contacti.html
+++ b/contacti.html
@@ -14,15 +14,17 @@
             <img src="logo.png" height="70" class="logo"/>
         </a>
         <div>
+            <a href="special-offers.html" class="menu">Специални оферти</a>
             <a href="novini.html" class="menu">Новини</a>
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
         </div>
     </header>
     <main class="contacti">
-        <h4 class="contacti">Адрес: София, ул. Росарио 1, Технически Университет Блок 8, 9
-            Телефон: 0886 75 10 94 E-mail: tues@elsys-bg.org</h4>
+        <h4 class="contacti">Адрес: София, ул. Росарио 1, Технически Университет Блок 8, 9;
+            Телефон: 0886 75 10 94; E-mail: tues@elsys-bg.org</h4>
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1TZSgThi9kI9xPaaBMY_cyuqyDSqJz17W" width="640" height="480"></iframe>
     </main>
+    
 </body>
 </html>
