--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <img src="logo.png" height="70" class="logo"/>
         </a>
         <div>
+            <a href="special-offers.html" class="menu">Специални оферти</a>
             <a href="novini.html" class="menu">Новини</a>
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
@@ -53,7 +54,7 @@
             </a>
             <div class="image-bottom">
                 <a href="https://www.aliexpress.com/item/32293966822.html?spm=a2g0o.productlist.0.0.479b12fbhl0KpP&algo_pvid=11c9b3d0-703a-4a43-b705-ebfab21200d2&algo_expid=11c9b3d0-703a-4a43-b705-ebfab21200d2-13&btsid=0b0a555916230819068274123e5829&ws_ab_test=searchweb0_0,searchweb201602_,searchweb201603_" target="_blank" class="name">100% метално дървена врата</a>
-                <a class="price">800 лв</a>
+                
             </div>
         </article>
         <article class="door">
@@ -107,7 +108,7 @@
             </a>
             <div class="image-bottom">
                 <a href="https://www.amazon.com/LTL-HOME-PRODUCTS-OK3680K-Fold/dp/B002SAMFMG/ref=sr_1_3?dchild=1&keywords=door&qid=1623082223&sr=8-3&th=1" target="_blank" class="name">Multifold акордеон врата</a>
-                <a class="price"> лв</a>
+                <a class="price"> 75 лв</a>
             </div>
         </article>
         <article class="door">
