--- a/zanas.html
+++ b/zanas.html
@@ -14,6 +14,7 @@
             <img src="logo.png" height="70" class="logo"/>
         </a>
         <div>
+            <a href="special-offers.html" class="menu">Специални оферти</a>
             <a href="novini.html" class="menu">Новини</a>
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
@@ -22,10 +23,11 @@
     <main class="main">
         <h1>За нас</h2>
         <p>Търсиш врати? Това е перфектния сайт за да намериш своята врата. Мрежа от 
-            сложни търсещи алгоритми минават през целия интернет за да намерят перфектната 
+            сложни топсекретни търсещи алгоритми минава през целия интернет за да намери перфектната 
             врата за теб. Изкуствен интелект намира вратата на мечтите ти. Можеш да 
-            намериш и закупиш врата напълно безплатно само за 3.99 лв.
+            намериш и закупиш врата напълно безплатно само за 3.99 лв. без ддс.
         </p>
     </main>
+    <img class= "center" src="https://2loud2oldmusicdotcom.files.wordpress.com/2018/12/1983ug-1.jpg" style="width:500px;height:400px;">
 </body>
 </html>
