--- a/contacti.html
+++ b/contacti.html
@@ -23,7 +23,7 @@
     <main class="contacti">
         <h4 class="contacti">Адрес: София, ул. Росарио 1, Технически Университет Блок 8, 9;
             Телефон: 0886 75 10 94; E-mail: tues@elsys-bg.org</h4>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1TZSgThi9kI9xPaaBMY_cyuqyDSqJz17W" width="640" height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=19M8o7b80NsejViZJQAjAejbUJttr5xNr" width="640" height="480"></iframe>
     </main>
     
 </body>
