--- a/novini.html
+++ b/novini.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <title>Doors Inc.</title>
+    <title>Новини</title>
+    <link rel = "icon" href = "logo2.png">
     <style>
         h1 {text-align: center;}
         p {text-align: center;}
@@ -27,6 +28,7 @@
             <a href="novini.html" class="menu">Новини</a>
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
+            <a href="reviews.html" class="menu">Ревюта</a>
         </div>
     </header>
     <div class="posts">
