added new section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
             <a href="reviews.html" class="menu">Ревюта</a>
+            <a href="our-team.html" class="menu">Нашият екип</a>
         </div>
     </header>
+    <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>ПОРЪЧАЙ СЕГА!</strong> НАШИТЕ СКЛАДОВЕ СА ПОЧТИ ПРАЗНИ!
+      </div>  
     <div class="doors">
         <article class="door">
             <a href="https://www.aliexpress.com/item/1005002481896806.html?spm=a2g0o.productlist.0.0.479b12fbhl0KpP&algo_pvid=null&algo_expid=null&btsid=0b0a555916230819068274123e5829&ws_ab_test=searchweb0_0,searchweb201602_,searchweb201603_" target="_blank" class="thumbnail">
