--- a/reviews.html
+++ b/reviews.html
@@ -20,8 +20,13 @@
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
             <a href="reviews.html" class="menu">Ревюта</a>
+            <a href="our-team.html" class="menu">Нашият екип</a>
         </div>
     </header>
+    <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>ПОРЪЧАЙ СЕГА!</strong> НАШИТЕ СКЛАДОВЕ СА ПОЧТИ ПРАЗНИ!
+      </div>  
     <main class="main">
         <h1>Ревюта на наши клиенти</h2>
     </main>
