--- a/contacti.html
+++ b/contacti.html
@@ -20,8 +20,13 @@
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
             <a href="reviews.html" class="menu">Ревюта</a>
+            <a href="our-team.html" class="menu">Нашият екип</a>
         </div>
     </header>
+    <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>ПОРЪЧАЙ СЕГА!</strong> НАШИТЕ СКЛАДОВЕ СА ПОЧТИ ПРАЗНИ!
+      </div>  
     <main class="contacti">
         <h4 class="contacti">Адрес: София, ул. Росарио 1, Технически Университет Блок 8, 9;
             Телефон: 0886 75 10 94; E-mail: tues@elsys-bg.org</h4>
