--- a/novini.html
+++ b/novini.html
@@ -29,11 +29,14 @@
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
             <a href="reviews.html" class="menu">Ревюта</a>
+            <a href="our-team.html" class="menu">Нашият екип</a>
         </div>
     </header>
-    <div class="posts">
-        
-    </div>
+    <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>ПОРЪЧАЙ СЕГА!</strong> НАШИТЕ СКЛАДОВЕ СА ПОЧТИ ПРАЗНИ!
+      </div>  
+   
     <h1 style="color:red;"></h1style>САМО СЕГА, ГОРЕЩА ОФЕРТА!</h1>
     
     <img class= "center" src="https://thumbs.dreamstime.com/b/wardrobe-door-beginning-narnia-trail-kilbroney-park-rostrevor-northern-ireland-182573136.jpg"style="width:400px;height:300px;">
