--- a/contacti.html
+++ b/contacti.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <link rel="stylesheet" href="social.css">
     <title>Контакти</title>
     <link rel = "icon" href = "logo2.png">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body style="color: white;">
     <header class="header">
         <a href="index.html">
@@ -31,6 +33,14 @@
         <h4 class="contacti">Адрес: София, ул. Росарио 1, Технически Университет Блок 8, 9;
             Телефон: 0886 75 10 94; E-mail: tues@elsys-bg.org</h4>
         <iframe src="https://www.google.com/maps/d/embed?mid=19M8o7b80NsejViZJQAjAejbUJttr5xNr" width="640" height="480"></iframe>
+    </main>
+
+    <main style="text-align:center;">
+        <h1>Намерете ни в</h1>
+        <a href="https://www.facebook.com/Doors-Inc-112842697704194" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/doorsincoffici1" class="fa fa-twitter"></a>
+        <a href="https://www.youtube.com/channel/UCxHeMqEMq5tkgbeQFRTDC_A" class="fa fa-youtube"></a>
+        <a href="https://www.instagram.com/doorsinccooperative" class="fa fa-instagram"></a>
     </main>
     
 </body>
