--- a/reviews.html
+++ b/reviews.html
@@ -38,12 +38,12 @@
 
     <h2>Димитър Стоянов</h2>
     <p style="font-size:20px;">
-    <img style="float:left"; src="https://assets.heart.co.uk/2018/31/hottest-middle-aged-men-2-1533740930.png" width="200" height="200">Един път се прибирах от дълга работна смяна на работа и тамън да вляза,да си седна на дивана и да гледам Европейското първенство,се оказва,че вратата е заяла и няма как да вляза.Паникьосах се,тъй като аз и жена ми живеем в малко селце и няма от къде да купя нова врата.Но тогава жена ми ми каза да се обадя на Doors Inc.Първоначално бях скиптичен,но след като звъннах те ми отговориха за по-малко от 5 секунди и преди да им кажа каква врата ми трябва,те вече я бяха пратили.След само 5 минути тя пристигна пред къщата ни.Цената беше уникална и всичко беше перфектно!12/10 </p>
+    <img style="float:left"; src="https://assets.heart.co.uk/2018/31/hottest-middle-aged-men-2-1533740930.png" width="200" height="200">Един път се прибирах от дълга работна смяна и тамън да вляза,да си седна на дивана и да гледам Европейското първенство,се оказва,че вратата е заяла и няма как да вляза.Паникьосах се,тъй като аз и жена ми живеем в малко селце и няма от къде да купя нова врата.Но тогава жена ми ми каза да се обадя на Doors Inc.Първоначално бях скиптично настроен,но след като звъннах те ми отговориха за по-малко от 5 секунди и преди да им кажа каква врата ми трябва,те вече я бяха пратили.След само 5 минути тя пристигна пред къщата ни.Цената беше уникална и всичко беше перфектно!12/10 </p>
     <br><br><br><br><br><br><br>
 
     <h2>София Иванова</h2>
     <p style="font-size:20px;">
-    <img style="float:left"; src="https://i.pinimg.com/originals/59/b5/b2/59b5b269b8ffb945c9dc1e89327c2a72.jpg" width="200" height="200">Аз живея в много скъп квартал и апартаментът ми също е доста скъп.Имам много огърлици,пръстени и много скъпи мебели.Обаче през годините се е случвало много пъти крадци да влизат в апартамента,тъй като вратата не е достатъчно добра и успяват много лесно да я разбият.Това ме тревожеше всеки ден и дори ме оставяше без сън,докато най-добрата ми приятелка ми препоръча Doors Inc.Там има всякакви модели врати.Аз избрах най-подсигурената врата и от месец никой не е успявал да влезе в апартамента!10/10</p>
+    <img style="float:left"; src="https://i.pinimg.com/originals/59/b5/b2/59b5b269b8ffb945c9dc1e89327c2a72.jpg" width="200" height="200">Аз живея в много скъп квартал и апартаментът ми също е доста скъп.Имам много огърлици,пръстени и много скъпи мебели.Обаче през годините се е случвало много пъти крадци да влизат в апартамента,тъй като вратата не е достатъчно добра и успяват много лесно да я разбият.Това ме тревожеше всеки ден и дори ме оставяше без сън,докато най-добрата ми приятелка ми препоръча Doors Inc.Там има всякакви модели врати.Аз избрах най-подсигурената врата и от тогава никой не е успявал да влезе в апартамента!10/10</p>
     <br><br><br><br><br><br><br>
 
     
