added help section

--- a/contacti.html
+++ b/contacti.html
@@ -16,27 +16,30 @@
         <a href="index.html">
             <img src="logo.png" height="70" class="logo"/>
         </a>
-        <div>
+        <div style="box-sizing: border-box;font-family: Roboto, Arial;">
             <a href="special-offers.html" class="menu">Специални оферти</a>
             <a href="novini.html" class="menu">Новини</a>
             <a href="zanas.html" class="menu">За Нас</a>
             <a href="contacti.html" class="menu">Контакти</a>
             <a href="reviews.html" class="menu">Ревюта</a>
             <a href="our-team.html" class="menu">Нашият екип</a>
+            <a href="help.html" class="menu">Помощ</a>
         </div>
     </header>
-    <div class="alert">
+    <div class="alert" style="box-sizing: border-box;font-family: Roboto, Arial;">
+    
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
         <strong>ПОРЪЧАЙ СЕГА!</strong> НАШИТЕ СКЛАДОВЕ СА ПОЧТИ ПРАЗНИ!
       </div>  
     <main class="contacti">
-        <h4 class="contacti">Адрес: София, ул. Росарио 1, Технически Университет Блок 8, 9;
+        <h4 class="contacti" style="box-sizing: border-box;font-family: Roboto, Arial;">
+        Адрес: София, ул. Росарио 1, Технически Университет Блок 8, 9;
             Телефон: 0886 75 10 94; E-mail: tues@elsys-bg.org</h4>
         <iframe src="https://www.google.com/maps/d/embed?mid=19M8o7b80NsejViZJQAjAejbUJttr5xNr" width="640" height="480"></iframe>
     </main>
 
     <main style="text-align:center;">
-        <h1>Намерете ни в</h1>
+        <h1 style="box-sizing: border-box;font-family: Roboto, Arial;">Намерете ни в</h1>
         <a href="https://www.facebook.com/Doors-Inc-112842697704194" class="fa fa-facebook"></a>
         <a href="https://twitter.com/doorsincoffici1" class="fa fa-twitter"></a>
         <a href="https://www.youtube.com/channel/UCxHeMqEMq5tkgbeQFRTDC_A" class="fa fa-youtube"></a>
