--- a/novini.html
+++ b/novini.html
@@ -30,6 +30,7 @@
             <a href="contacti.html" class="menu">Контакти</a>
             <a href="reviews.html" class="menu">Ревюта</a>
             <a href="our-team.html" class="menu">Нашият екип</a>
+            <a href="help.html" class="menu">Помощ</a>
         </div>
     </header>
     <div class="alert">
