--- a/zanas.html
+++ b/zanas.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,6 +21,7 @@
             <a href="contacti.html" class="menu">Контакти</a>
             <a href="reviews.html" class="menu">Ревюта</a>
             <a href="our-team.html" class="menu">Нашият екип</a>
+            <a href="help.html" class="menu">Помощ</a>
         </div>
     </header>
     <div class="alert">
