--- a/help.html
+++ b/help.html
@@ -28,7 +28,7 @@
         </script>
     
     <style>
-		#kalkulator{
+		#calc{
 			margin-left: 680px;
 			margin-top: 150px;
 		}
@@ -78,7 +78,7 @@
         <strong>ПОРЪЧАЙ СЕГА!</strong> НАШИТЕ СКЛАДОВЕ СА ПОЧТИ ПРАЗНИ!
       </div>  
    
-    <div id="kalkulator">
+    <div id="calc">
     <div class = title >Калкулатор - количка</div>
     <table border="3">
     <tr>
